@@ -1,14 +1,14 @@
-# OS X folder attributes
+# temp nibs and swap files
+*~.nib
+*.swp
+
+
+# Mac OS X folder attributes
 .DS_Store
 
 # Xcode's folder for intermediate data:
 Build
 DerivedData
-
-# temp nibs and swap files
-*~.nib
-*.swp
-
 
 
 #exclude generated html files in folder "doc":
