@@ -203,7 +203,7 @@ class GTestFlagSaver {
   bool list_tests_;
   String output_;
   bool print_time_;
-  bool pretty_;
+  // bool pretty_;   // unused
   internal::Int32 random_seed_;
   internal::Int32 repeat_;
   bool shuffle_;
